#story[702] - Fixed bug where if list cell was selected, the text turned white (and thus invisible) #fix - Attempted to refactor the logging for when patient receiving/donating organs are modified, but realised the bug is not from my branch #refactor

--- a/src/main/resources/css/guiStyle.css
+++ b/src/main/resources/css/guiStyle.css
@@ -90,3 +90,7 @@
 .list-view .list-cell:odd {
     -fx-control-inner-background: WHITE;
 }
+
+.list-cell:filled:selected {
+    -fx-text-fill: GREY;
+}
